--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,8 +1,71 @@
+@report{dwave_zephyr,
+	title = {{Zephyr} {Topology} of {D-Wave} {Quantum} {Processors}},
+	type = {D-Wave Technical Report Series},
+	institution = {D-Wave},
+	year = {2021},
+	number = {14-1056A-A},
+	url = {https://www.dwavesys.com/resources/publications},
+}
+
+@online{dwave_samplers,
+	author = {D-Wave},
+	title = {{dwave-samplers}},
+	url = {https://docs.dwavequantum.com/en/latest/ocean/api_ref_samplers/},
+	urldate = {2025-04-18},
+}
+
+@book{nierhaus_algorithmic_2009,
+	title = {Algorithmic composition: paradigms of automated music generation},
+	isbn = {978-3-211-75539-6},
+	publisher = {Springer},
+	author = {Nierhaus, Gerhard},
+	year = {2009},
+}
+
+@online{dwave_leap,
+	author = {D-Wave},
+	title = {The {Leap} {Quantum} {Cloud} {Service}},
+	url = {https://www.dwavequantum.com/solutions-and-products/cloud-platform/},
+	urldate = {2025-04-18},
+}
+
+@report{dwave_topology,
+	title = {{Next}-{Generation} {Topology} of {D-Wave} {Quantum} {Processors}},
+	type = {D-Wave Technical Report Series},
+	institution = {D-Wave},
+	year = {2019},
+	number = {14-1026A-C},
+	url = {https://www.dwavesys.com/resources/publications},
+}
+
+@online{dwave_qpu,
+	author = {D-Wave},
+	title = {{QPU} {Solver} {Parameters}},
+	url = {https://docs.dwavequantum.com/en/latest/quantum_research/solver_parameters.html},
+	urldate = {2025-04-18},
+}
+
+@online{dwave_embedguidance,
+	author = {D-Wave},
+	title = {Minor-{Embedding}: {Best} {Practices}},
+	url = {https://docs.dwavequantum.com/en/latest/quantum_research/embedding_guidance.html},
+	urldate = {2025-04-18},
+}
+
+@online{dwave_embedding,
+	author = {D-Wave},
+	title = {Minor-{Embedding}},
+	url = {https://docs.dwavequantum.com/en/latest/quantum_research/embedding_intro.html},
+	urldate = {2025-04-07},
+}
 
 @inproceedings{pearce_towards_2001,
 	title = {Towards {A} {Framework} for the {Evaluation} of {Machine} {Compositions}},
 	author = {Pearce, M. and Wiggins, Geraint A.},
+	booktitle = {{Proceedings} of the {AISB'01} {Symposium} on {Artificial} {Intelligence} and {Creativity} in {Arts} and {Sciences}},
 	year = {2001},
+	pages = {22--32},
+	url = {www.doc.gold.ac.uk/~mas02gw/papers/AISB01.pdf},
 }
 
 @article{nakamura_statistical_2018,
@@ -16,7 +79,6 @@
 	month = jan,
 	year = {2018},
 }
-
 
 @report{dwave_reverse,
 	title = {{Reverse} {Annealing} for {Local} {Refinement} of {Solutions}},
@@ -37,7 +99,9 @@
 	author = {Izquierdo, Zoe Gonzalez and Grabbe, Shon and Idris, Husni and Wang, Zhihui and Marshall, Jeffrey and Rieffel, Eleanor},
 	month = nov,
 	year = {2022},
-	note = {arXiv:2205.12936 [quant-ph]},
+	eprinttype = {arXiv},
+	eprint = {2205.12936},
+	eprintclass = {quant-ph},
 }
 
 @article{montanez-barrera_unbalanced_2024,
@@ -50,11 +114,14 @@
 	author = {Montanez-Barrera, Alejandro and Willsch, Dennis and Maldonado-Romo, Alberto and Michielsen, Kristel},
 	month = apr,
 	year = {2024},
-	note = {arXiv:2211.13914 [quant-ph]},
+	eprinttype = {arXiv},
+	eprint = {2211.13914},
+	eprintclass =  {quant-ph},
 }
 
-@misc{dwave_decomposing,
-	title = {{QPU} {Solvers}: {Decomposing} {Large} {Problems} — {D}-{Wave} {System} {Documentation} documentation},
+@online{dwave_decomposing,
+	author = {D-Wave},
+	title = {{Decomposing} {Large} {Problems}},
 	url = {https://docs.dwavesys.com/docs/latest/handbook_decomposing.html},
 	urldate = {2025-04-18},
 }
@@ -94,12 +161,11 @@
 	pages = {459--464},
 }
 
-@misc{nasa_golden_2024,
-	title = {Golden {Record} {Sounds} and {Music} - {NASA} {Science}},
+@online{nasa_golden_2024,
+	author = {{NASA} Science},
+	title = {Golden {Record} {Sounds} and {Music}},
 	url = {https://science.nasa.gov/mission/voyager/golden-record-contents/sounds/},
 	urldate = {2025-04-17},
-	month = apr,
-	year = {2024},
 }
 
 @article{finley_quantum_2017,
@@ -116,7 +182,6 @@
 	title = {The quantum adiabatic algorithm applied to random optimization problems: {The} quantum spin glass perspective},
 	volume = {523},
 	issn = {0370-1573},
-	shorttitle = {The quantum adiabatic algorithm applied to random optimization problems},
 	doi = {10.1016/j.physrep.2012.10.002},
 	number = {3},
 	journal = {Physics Reports},
@@ -135,7 +200,6 @@
 	author = {Farhi, Edward and Goldstone, Jeffrey and Gutmann, Sam and Lapan, Joshua and Lundgren, Andrew and Preda, Daniel},
 	month = apr,
 	year = {2001},
-	note = {Publisher: American Association for the Advancement of Science},
 	pages = {472--475},
 }
 
@@ -150,56 +214,59 @@
 	author = {Boixo, Sergio and Albash, Tameem and Spedalieri, Federico M. and Chancellor, Nicholas and Lidar, Daniel A.},
 	month = jun,
 	year = {2013},
-	note = {Publisher: Nature Publishing Group},
 }
 
 @book{sakurai_quantum_2020,
-	place={Cambridge},
-	edition={3},
-	title={Modern Quantum Mechanics},
-	publisher={Cambridge University Press},
-	author={Sakurai, J. J. and Napolitano, Jim},
-	year={2020}
+	place = {Cambridge},
+	edition = {3},
+	title = {Modern Quantum Mechanics},
+	publisher = {Cambridge University Press},
+	author = {Sakurai, J. J. and Napolitano, Jim},
+	year = {2020}
 }
 
-@misc{miranda_quantum_2021,
+@online{miranda_quantum_2021,
 	title = {A {Quantum} {Natural} {Language} {Processing} {Approach} to {Musical} {Intelligence}},
 	doi = {10.48550/arXiv.2111.06741},
-	publisher = {arXiv},
 	author = {Miranda, Eduardo Reck and Yeung, Richie and Pearson, Anna and Meichanetzidis, Konstantinos and Coecke, Bob},
 	month = dec,
 	year = {2021},
-	note = {arXiv:2111.06741},
+	eprinttype = {arXiv},
+	eprint = {2111.06741},
+	eprintclass = {quant-ph},
 }
 
-@misc{miranda_teaching_2022,
+@online{miranda_teaching_2022,
 	title = {Teaching {Qubits} to {Sing}: {Mission} {Impossible}?},
 	doi = {10.48550/arXiv.2207.08225},
-	publisher = {arXiv},
 	author = {Miranda, Eduardo Reck and Siegelwax, Brian N.},
 	month = aug,
 	year = {2022},
-	note = {arXiv:2207.08225},
+	eprinttype = {arXiv},
+	eprint = {2207.08225},
+	eprintclass = {quant-ph},
 }
 
-@misc{arya_music_2022,
+@online{arya_music_2022,
 	title = {Music {Composition} {Using} {Quantum} {Annealing}},
 	doi = {10.48550/arXiv.2201.10557},
-	publisher = {arXiv},
 	author = {Arya, Ashish and Botelho, Ludmila and Cañete, Fabiola and Kapadia, Dhruvi and Salehi, Özlem},
 	month = jan,
 	year = {2022},
-	note = {arXiv:2201.10557},
+	eprinttype = {arXiv},
+	eprint = {2201.10557},
+	eprintclass = {quant-ph},
 }
 
-@misc{miranda_quantum_2020,
+@online{miranda_quantum_2020,
 	title = {Quantum {Computer}: {Hello}, {Music}!},
 	doi = {10.48550/arXiv.2006.13849},
-	publisher = {arXiv},
 	author = {Miranda, Eduardo R.},
 	month = jun,
 	year = {2020},
-	note = {arXiv:2006.13849},
+	eprinttype = {arXiv},
+	eprint = {2006.13849},
+	eprintclass = {quant-ph},
 }
 
 @inproceedings{wiggins_composition_1999,
@@ -208,7 +275,7 @@
 	year = {1999},
 	pages = {110--117},
 	booktitle = {Proceedings of the AISB'99 Symposium on Musical Creativity},
-	publisher = {AISB (Society for the Study of Artificial Intelligence and the Simulation of Behaviour)},
+	publisher = {AISB},
 }
 
 @book{hiller_experimental_1959,
@@ -222,6 +289,7 @@
 @article{lovelace_sketch_1843,
 	title = {Sketch of {The} {Analytical} {Engine}},
 	url = {https://www.fourmilab.ch/babbage/sketch.html},
+	urldate = {2025-04-07},
 	year = {1843},
 	author = {Menabrea, Luigi Federico and Lovelace, Ada},
 	journal = {Scientific Memoirs},
@@ -239,17 +307,13 @@
 	author = {Unruh, W. G.},
 	month = feb,
 	year = {1995},
-	note = {Publisher: American Physical Society},
 	pages = {992--997},
 }
 
 @article{brooks_quantum_2023,
 	title = {Quantum computers: what are they good for?},
 	volume = {617},
-	copyright = {2023 Springer Nature Limited},
-	shorttitle = {Quantum computers},
 	doi = {10.1038/d41586-023-01692-9},
-	abstract = {For now, absolutely nothing. But researchers and firms are optimistic about the applications.},
 	number = {7962},
 	journal = {Nature},
 	author = {Brooks, Michael},
@@ -258,25 +322,26 @@
 	pages = {S1--S3},
 }
 
-@misc{mauron_challenging_2025,
+@online{mauron_challenging_2025,
 	title = {Challenging the {Quantum} {Advantage} {Frontier} with {Large}-{Scale} {Classical} {Simulations} of {Annealing} {Dynamics}},
 	doi = {10.48550/arXiv.2503.08247},
-	publisher = {arXiv},
 	author = {Mauron, Linda and Carleo, Giuseppe},
 	month = mar,
 	year = {2025},
-	note = {arXiv:2503.08247 [quant-ph]},
+	eprinttype = {arXiv},
+	eprint = {2503.08247},
+	eprintclass = {quant-ph},
 }
 
-@misc{tindall_dynamics_2025,
+@online{tindall_dynamics_2025,
 	title = {Dynamics of disordered quantum systems with two- and three-dimensional tensor networks},
 	doi = {10.48550/arXiv.2503.05693},
-	publisher = {arXiv},
 	author = {Tindall, Joseph and Mello, Antonio and Fishman, Matt and Stoudenmire, Miles and Sels, Dries},
 	month = mar,
 	year = {2025},
-	note = {arXiv:2503.05693 [quant-ph]},
-	keywords = {Quantum Physics},
+	eprinttype = {arXiv},
+	eprint = {2503.05693},
+	eprintclass = {quant-ph},
 }
 
 @article{king_beyond_2025,
@@ -285,19 +350,20 @@
 	journal = {Science},
 	volume = {388},
 	number = {6743},
-	pages = {199-204},
+	pages = {199--204},
 	year = {2025},
 	doi = {10.1126/science.ado6285},
-	}
+}
 
-@misc{pednault_leveraging_2019,
+@online{pednault_leveraging_2019,
 	title = {Leveraging {Secondary} {Storage} to {Simulate} {Deep} 54-qubit {Sycamore} {Circuits}},
 	doi = {10.48550/arXiv.1910.09534},
-	publisher = {arXiv},
 	author = {Pednault, Edwin and Gunnels, John A. and Nannicini, Giacomo and Horesh, Lior and Wisnieff, Robert},
 	month = oct,
 	year = {2019},
-	note = {arXiv:1910.09534 [quant-ph]},
+	eprinttype = {arXiv},
+	eprint = {1910.09534},
+	eprintclass = {quant-ph},
 }
 
 @article{mccormick_race_2022,
@@ -305,7 +371,6 @@
 	volume = {15},
 	issn = {1943-2879},
 	doi = {10.1103/Physics.15.19},
-	language = {en},
 	journal = {Physics},
 	author = {McCormick, Katie},
 	month = feb,
@@ -316,7 +381,6 @@
 @article{arute_quantum_2019,
 	title = {Quantum supremacy using a programmable superconducting processor},
 	volume = {574},
-	copyright = {2019 The Author(s), under exclusive licence to Springer Nature Limited},
 	issn = {1476-4687},
 	doi = {10.1038/s41586-019-1666-5},
 	number = {7779},
@@ -324,19 +388,18 @@
 	author = {Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Biswas, Rupak and Boixo, Sergio and Brandao, Fernando G. S. L. and Buell, David A. and Burkett, Brian and Chen, Yu and Chen, Zijun and Chiaro, Ben and Collins, Roberto and Courtney, William and Dunsworth, Andrew and Farhi, Edward and Foxen, Brooks and Fowler, Austin and Gidney, Craig and Giustina, Marissa and Graff, Rob and Guerin, Keith and Habegger, Steve and Harrigan, Matthew P. and Hartmann, Michael J. and Ho, Alan and Hoffmann, Markus and Huang, Trent and Humble, Travis S. and Isakov, Sergei V. and Jeffrey, Evan and Jiang, Zhang and Kafri, Dvir and Kechedzhi, Kostyantyn and Kelly, Julian and Klimov, Paul V. and Knysh, Sergey and Korotkov, Alexander and Kostritsa, Fedor and Landhuis, David and Lindmark, Mike and Lucero, Erik and Lyakh, Dmitry and Mandrà, Salvatore and McClean, Jarrod R. and McEwen, Matthew and Megrant, Anthony and Mi, Xiao and Michielsen, Kristel and Mohseni, Masoud and Mutus, Josh and Naaman, Ofer and Neeley, Matthew and Neill, Charles and Niu, Murphy Yuezhen and Ostby, Eric and Petukhov, Andre and Platt, John C. and Quintana, Chris and Rieffel, Eleanor G. and Roushan, Pedram and Rubin, Nicholas C. and Sank, Daniel and Satzinger, Kevin J. and Smelyanskiy, Vadim and Sung, Kevin J. and Trevithick, Matthew D. and Vainsencher, Amit and Villalonga, Benjamin and White, Theodore and Yao, Z. Jamie and Yeh, Ping and Zalcman, Adam and Neven, Hartmut and Martinis, John M.},
 	month = oct,
 	year = {2019},
-	note = {Publisher: Nature Publishing Group},
-	keywords = {Quantum information, Quantum physics},
 	pages = {505--510},
 }
 
-@misc{preskill_supremacy_2012,
+@online{preskill_supremacy_2012,
 	title = {Quantum computing and the entanglement frontier},
 	doi = {10.48550/arXiv.1203.5813},
-	publisher = {arXiv},
 	author = {Preskill, John},
 	month = nov,
 	year = {2012},
-	note = {arXiv:1203.5813 [quant-ph]},
+	eprinttype = {arXiv},
+	eprint = {1203.5813},
+	eprintclass = {quant-ph},
 }
 
 @article{feynman_simulating_1982,
@@ -345,7 +408,6 @@
 	issn = {1572-9575},
 	doi = {10.1007/BF02650179},
 	number = {6},
-	urldate = {2025-04-17},
 	journal = {International Journal of Theoretical Physics},
 	author = {Feynman, Richard P.},
 	month = jun,
@@ -356,31 +418,24 @@
 @article{khezri_customized_2022,
 	title = {Customized {Quantum} {Annealing} {Schedules}},
 	volume = {17},
-	url = {https://link.aps.org/doi/10.1103/PhysRevApplied.17.044005},
 	doi = {10.1103/PhysRevApplied.17.044005},
 	number = {4},
-	urldate = {2024-10-11},
 	journal = {Physical Review Applied},
 	author = {Khezri, Mostafa and Dai, Xi and Yang, Rui and Albash, Tameem and Lupascu, Adrian and Lidar, Daniel A.},
 	month = apr,
 	year = {2022},
-	publisher = {American Physical Society},
-	pages = {044005},
 }
 
 @article{perdomo-ortiz_protein_2012,
 	title = {Finding low-energy conformations of lattice protein models by quantum annealing},
 	volume = {2},
 	issn = {2045-2322},
-	url = {https://www.nature.com/articles/srep00571},
 	doi = {10.1038/srep00571},
 	number = {1},
-	urldate = {2025-01-12},
 	journal = {Scientific Reports},
 	author = {Perdomo-Ortiz, Alejandro and Dickson, Neil and Drew-Brook, Marshall and Rose, Geordie and Aspuru-Guzik, Alán},
 	month = aug,
 	year = {2012},
-	publisher = {Nature Publishing Group},
 	pages = {571},
 }
 
@@ -388,39 +443,35 @@
 	title = {Traffic signal optimization on a square lattice with quantum annealing},
 	volume = {11},
 	issn = {2045-2322},
-	url = {https://www.nature.com/articles/s41598-021-82740-0},
 	doi = {10.1038/s41598-021-82740-0},
 	number = {1},
-	urldate = {2025-01-12},
 	journal = {Scientific Reports},
 	author = {Inoue, Daisuke and Okada, Akihisa and Matsumori, Tadayoshi and Aihara, Kazuyuki and Yoshida, Hiroaki},
 	month = feb,
 	year = {2021},
-	publisher = {Nature Publishing Group},
 	pages = {3303},
 }
 
 @inproceedings{phillipson_portfolio_2021,
-	address = {Cham},
 	title = {Portfolio {Optimisation} {Using} the {D}-{Wave} {Quantum} {Annealer}},
 	isbn = {978-3-030-77980-1},
 	doi = {10.1007/978-3-030-77980-1_4},
 	booktitle = {Computational {Science} -- {ICCS} 2021},
-	publisher = {Springer International Publishing},
 	author = {Phillipson, Frank and Bhatia, Harshil Singh},
 	editor = {Paszynski, Maciej and Kranzlmüller, Dieter and Krzhizhanovskaya, Valeria V. and Dongarra, Jack J. and Sloot, Peter M. A.},
 	year = {2021},
 	pages = {45--59},
 }
 
-@misc{google,
+@online{google,
+	author = {Google},
 	title = {Google {Quantum} {AI}},
 	url = {https://quantumai.google/},
 	urldate = {2025-01-12},
-	journal = {Google Quantum AI},
 }
 
-@misc{ibm,
+@online{ibm,
+	author = {IBM},
 	title = {{IBM} {Quantum} {Computing}},
 	url = {https://www.ibm.com/quantum/},
 	urldate = {2025-01-12},
@@ -438,10 +489,8 @@
 	title = {Towards an automatic music arrangement framework using score reduction},
 	volume = {8},
 	issn = {1551-6857},
-	url = {https://dl.acm.org/doi/10.1145/2071396.2071404},
 	doi = {10.1145/2071396.2071404},
 	number = {1},
-	urldate = {2024-12-05},
 	journal = {ACM Trans. Multimedia Comput. Commun. Appl.},
 	author = {Huang, Jiun-Long and Chiu, Shih-Chuan and Shan, Man-Kwan},
 	month = feb,
@@ -453,26 +502,19 @@
 	title = {Ising formulations of many {NP} problems},
 	volume = {2},
 	issn = {2296-424X},
-	url = {https://www.frontiersin.org/journals/physics/articles/10.3389/fphy.2014.00005/full},
 	doi = {10.3389/fphy.2014.00005},
-	language = {English},
-	urldate = {2024-10-14},
 	journal = {Frontiers in Physics},
 	author = {Lucas, Andrew},
 	month = feb,
 	year = {2014},
-	note = {Publisher: Frontiers},
 }
 
 @article{born_beweis_1928,
-	title = {Beweis des {Adiabatensatzes}},
+	title = {Beweis des {Adiabatensatzes} [{Proof} of the {Adiabatic} {Theorem}]},
 	volume = {51},
 	issn = {0044-3328},
-	url = {https://doi.org/10.1007/BF01343193},
 	doi = {10.1007/BF01343193},
-	language = {de},
 	number = {3},
-	urldate = {2025-03-01},
 	journal = {Zeitschrift für Physik},
 	author = {Born, M. and Fock, V.},
 	month = mar,
@@ -488,41 +530,33 @@
 	year = {2011},
 }
 
-@misc{moses_computational_2016,
+@online{moses_computational_2016,
 	title = {Computational {Complexity} of {Arranging} {Music}},
-	url = {http://arxiv.org/abs/1607.04220},
 	doi = {10.48550/arXiv.1607.04220},
-	urldate = {2024-11-09},
-	publisher = {arXiv},
 	author = {Moses, William S. and Demaine, Erik D.},
 	month = jul,
 	year = {2016},
-	note = {arXiv:1607.04220},
+	eprinttype = {arXiv},
+	eprint = {1607.04220},
+	eprintclass = {quant-ph},
 }
 
 @article{johnson_quantum_2011,
 	title = {Quantum annealing with manufactured spins},
 	volume = {473},
-	copyright = {2011 Springer Nature Limited},
 	issn = {1476-4687},
-	url = {https://www.nature.com/articles/nature10012},
 	doi = {10.1038/nature10012},
-	language = {en},
 	number = {7346},
-	urldate = {2025-01-06},
 	journal = {Nature},
 	author = {Johnson, M. W. and Amin, M. H. S. and Gildert, S. and Lanting, T. and Hamze, F. and Dickson, N. and Harris, R. and Berkley, A. J. and Johansson, J. and Bunyk, P. and Chapple, E. M. and Enderud, C. and Hilton, J. P. and Karimi, K. and Ladizinsky, E. and Ladizinsky, N. and Oh, T. and Perminov, I. and Rich, C. and Thom, M. C. and Tolkacheva, E. and Truncik, C. J. S. and Uchaikin, S. and Wang, J. and Wilson, B. and Rose, G.},
 	month = may,
 	year = {2011},
-	note = {Publisher: Nature Publishing Group},
 	pages = {194--198},
 }
 
 @inproceedings{li_entropy_2019,
 	title = {Automatic {Piano} {Reduction} of {Orchestral} {Music} {Based} on {Musical} {Entropy}},
-	url = {https://ieeexplore.ieee.org/document/8693036},
 	doi = {10.1109/CISS.2019.8693036},
-	urldate = {2024-12-27},
 	booktitle = {2019 53rd {Annual} {Conference} on {Information} {Sciences} and {Systems} ({CISS})},
 	author = {Li, You and Wilk, Christoph M. and Hori, Takeshi and Sagayama, Shigeki},
 	month = mar,
