--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -3,6 +3,13 @@
 \usepackage[a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage{times}
 
+\usepackage[utf8]{inputenc}
+\DeclareUnicodeCharacter{2212}{$-$} % Minus sign
+\DeclareUnicodeCharacter{03BC}{µ}
+
+\usepackage[british]{babel}
+\usepackage{csquotes}
+
 \usepackage[font=small, labelfont=bf]{caption}
 \usepackage[labelformat=parens, labelfont=bf, subrefformat=parens]{subcaption}
 
@@ -31,13 +38,11 @@
 \newtheorem*{definition}{Definition}
 \newtheorem{condition}{Condition}
 
-\usepackage[utf8]{inputenc}
-\DeclareUnicodeCharacter{2212}{$-$} % Minus sign
-\DeclareUnicodeCharacter{03BC}{µ}
-
 % Bibliography
-\usepackage[backend=biber, sorting=none]{biblatex}
+\usepackage[style=trad-abbrv, maxnames=2, date=year, backend=biber, sorting=none]{biblatex}
 \addbibresource{thesis.bib}
+
+\usepackage{xurl}
 
 % Number formatting
 \usepackage[mode=text]{siunitx}
@@ -172,18 +177,18 @@ Whilst there are merits for each model, this study exclusively uses QUBO models 
     \label{fig:pegasus}
 \end{figure}
 
-Once a problem has been expressed with an Ising or QUBO model, it is sent to a quantum processing unit (QPU) to be solved. These units takes the form of a physical Ising spin glass: a lattice of dipoles connected via couplers. The qubit biases and coupling values are influenced by electromagnetic fields, allowing the mapping of a model's \emph{logical} qubits to a QPU's \emph{physical} qubits, with linear terms as dipoles and quadratic terms as couplers between them. This mapping process is known as minor embedding, and is often handled by a classical computer ``on the fly'' each time a problem is submitted, introducing a slight computational overhead to running a problem [CITE]. Fixed embeddings can be specified, but these require a priori knowledge of the specific QPU architecture. Once embedded, the system can be prepared in its initial ground state, and allowed to evolve to its final state to obtain a solution that aims to minimise the problem model.
+Once a problem has been expressed with an Ising or QUBO model, it is sent to a quantum processing unit (QPU) to be solved. These units takes the form of a physical Ising spin glass: a lattice of dipoles connected via couplers. The qubit biases and coupling values are influenced by electromagnetic fields, allowing the mapping of a model's \emph{logical} qubits to a QPU's \emph{physical} qubits, with linear terms as dipoles and quadratic terms as couplers between them. This mapping process is known as minor embedding, and is often handled by a classical computer ``on the fly'' each time a problem is submitted \cite{dwave_embedding}, introducing a slight computational overhead to running a problem. Fixed embeddings can be specified, but these require a priori knowledge of the specific QPU architecture. Once embedded, the system can be prepared in its initial ground state, and allowed to evolve to its final state to obtain a solution that aims to minimise the problem model.
 
-Often, the topology of a QPU doesn't allow an exact one-to-one mapping of a problem to physical qubits. It may be the case that the problem requires a variable to have a higher degree (number of connections) than the number of couplers physically permitted by the QPU. The solution to this is the introduction of chains---connected physical qubits chained together, acting like a single discrete variable, which enables the necessary mapping [CITE]. A parameter called chain strength determines how strongly the chain is coupled, enforcing all qubits within the chain to have the same value in order for it to remain discrete. Chain strength is an important parameter that can affect the quality of solutions, and can be tuned. If it is too weak, a final state may include chain breaks: chains where the interconnected qubits differ in value. Conflicts like these can be solved via different approaches, a common one being majority vote, which sets the value of the corresponding discrete variable to the modal value of the chain [CITE]. However, since this operation is done by a classical computer after the annealing process, the determined value may result in an undesirable, sub-optimal solution, and so chain breaks are often best avoided. Alternatively, if the chain strength is too strong, it can overpower the other terms in the problem model, resulting in poor optimisation [CITE].
+Often, the topology of a QPU doesn't allow an exact one-to-one mapping of a problem to physical qubits. It may be the case that the problem requires a variable to have a higher degree (number of connections) than the number of couplers physically permitted by the QPU. The solution to this is the introduction of chains---connected physical qubits chained together, acting like a single discrete variable, which enables the necessary mapping \cite{dwave_embedding}. A parameter called chain strength determines how strongly the chain is coupled, enforcing all qubits within the chain to have the same value in order for it to remain discrete. Chain strength is an important parameter that can affect the quality of solutions, and can be tuned. If it is too weak, a final state may include chain breaks: chains where the interconnected qubits differ in value. Conflicts like these can be solved via different approaches, a common one being majority vote, which sets the value of the corresponding discrete variable to the modal value of the chain. However, since this operation is done by a classical computer after the annealing process, the determined value may result in an undesirable, sub-optimal solution, and so chain breaks are often best avoided. Alternatively, if the chain strength is too strong, it can overpower the other terms in the problem model, resulting in poor optimisation \cite{dwave_embedguidance}.
 
-QPU annealers (also known as solvers) have many other parameters that can be tuned, influencing exactly how the annealing process is carried out and significantly affecting the quality of solutions [CITE SOLVER WEBSITE]. Aside from chain strength, others that this study considers are anneal time per sample and number of reads. Both these parameters affect the total problem solve time, and so finding a balance between them is key to minimising the time to solution.
+QPU annealers (also known as solvers) have many other parameters that can be tuned, influencing exactly how the annealing process is carried out and significantly affecting the quality of solutions \cite{dwave_qpu}. Aside from chain strength, others that this study considers are anneal time per sample and number of reads. Both these parameters affect the total problem solve time, and so finding a balance between them is key to minimising the time to solution.
 
 As mentioned previously, the time interval for each sample (evolution) is short in order to relax the adiabatic condition. For simple problems this is sufficient to return optimal solutions with a high likelihood, however, as the problem size increases this may no longer be the case. As the number of variables increases, the energy gaps between the ground and first excited state get exponentially smaller \cite{bapst_quantum_2013}; as seen in \cref{eq:energy-gap}, smaller spectral gaps ($\Delta E$) require longer anneal times ($T$) to prevent excitation to higher energy states.
 A benefit of shortened anneal times is that the system can ``read'' (i.e.\ evolved and measured) many times. A problem with $N$ qubits will have $2^N$ energy levels that form a distribution, which is sampled each time the system is read. Increasing the number of reads raises the probability that a low-energy state from the distribution is measured.
 
 % D-Wave
-Many companies provide both personal and commercial access to gate-based quantum computers \cites{google}{ibm}, however, few develop the hardware necessary for quantum annealing. D-Wave Quantum Systems Inc.\ (``D-Wave'') was the first to realise a true quantum annealer \cite{johnson_quantum_2011}, and has since developed and released their technology to the wider community \cite{finley_quantum_2017}. All problems in this study were solved by D-Wave's Advantage System 4.1 processor\footnote{Access kindly granted by the Durham University Physics Department.}, which boasts a topology of \num{5640} qubits each with a maximum degree of \num{15} [CITE]. An example of this topology can be seen in \cref{fig:pegasus}. These computers are held in low-magnetic field environments at cryogenic temperatures to prevent unwanted fluctuations that would affect fidelity [CITE].
-Interaction with D-Wave QPUs is handled through their Leap quantum cloud service [CITE], which is used to submit problems to solvers. D-Wave provides an open-source software development package (SDK) of Python tools which allows users to create optimisation problem models for the QPU to solve [CITE].
+Many companies provide both personal and commercial access to gate-based quantum computers \cites{google}{ibm}, however, few develop the hardware necessary for quantum annealing. D-Wave Quantum Systems Inc.\ (``D-Wave'') was the first to realise a true quantum annealer \cite{johnson_quantum_2011}, and has since developed and released their technology to the wider community \cite{finley_quantum_2017}. All problems in this study were solved by D-Wave's Advantage System 4.1 processor\footnote{Access kindly granted by the Durham University Physics Department.}, which boasts a topology of \num{5640} qubits each with a maximum degree of \num{15} \cite{dwave_topology}. An example of this topology can be seen in \cref{fig:pegasus}. These computers are held in low-magnetic field environments at cryogenic temperatures to prevent unwanted fluctuations that would affect fidelity.
+Interaction with D-Wave QPUs is handled through their Leap quantum cloud service \cite{dwave_leap}, which is used to submit problems to solvers. D-Wave provides an open-source software development package (SDK) of Python tools which allows users to create optimisation problem models for the QPU to solve.
 
 Quantum annealing has already been applied to a widge array of optimisation problems: this study explores a novel creative application of this computing technique---music arrangement.
 
@@ -195,8 +200,8 @@ Quantum annealing has already been applied to a widge array of optimisation prob
 Music has become a hallmark of the human experience---so much so that the \textit{Voyager 1} probe carries 90 minutes of music from across the world as a message to potential extraterrestrial life \cite{nasa_golden_2024}. Whilst some musicians compose entirely new music, others adapt previously-written pieces for practical or artistic reasons, whether that be in terms of instrumentation, medium, or style. This is \emph{arrangement}.
 Traditionally, the arrangement of music is a complex process that requires a deep understanding of musical theory. Arrangers use their skill and creativity to create a piece that is both musically interesting and emotionally engaging, whilst still remaining faithful to the source material---a challenging and often time-consuming process. Perhaps it is unsurprising, then, that there has been interest in automating this process.
 
-One of the earliest examples of the attempted automation of arrangement can be seen in the \textit{Musikalisches Würfelspiel} (``musical dice game'') system popular in the 18th century [CITE]. The roll of dice would determine the order of pre-composed musical phrases, arranging them into new combinations without the need for a composer. This system was engaged by the likes of Bach and Mozart, although fell out of fashion the following century.
-The introduction of computers in the 20th century allowed for more sophisticated methods of music arrangement. Composers could now transpose and manipulate musical parts digitally, without the need to transcribe parts by hand. Moving into the 21st century, more advanced techniques such as genetic algorithms [CITE] and neural networks [CITE] have been used to arrange music, with varying degrees of success. The rearrangement of a piece can have a great effect on how the listener interprets it, and doing this effectively is still a pertinent issue many musicians face. 
+One of the earliest examples of the attempted automation of arrangement can be seen in the \textit{Musikalisches Würfelspiel} (``musical dice game'') system popular in the 18th century \cite{nierhaus_algorithmic_2009}. The roll of dice would determine the order of pre-composed musical phrases, arranging them into new combinations without the need for a composer. This system was engaged by the likes of Bach and Mozart, although fell out of fashion the following century.
+The introduction of computers in the 20th century allowed for more sophisticated methods of music arrangement. Composers could now transpose and manipulate musical parts digitally, without the need to transcribe parts by hand. Moving into the 21st century, more advanced techniques such as genetic algorithms and neural networks have been used to arrange music, with varying degrees of success \cite{nierhaus_algorithmic_2009}. The rearrangement of a piece can have a great effect on how the listener interprets it, and doing this effectively is still a pertinent issue many musicians face. 
 
 In this study, we aim to formulate music arrangement as an optimisation problem, which can be solved via quantum annealing. It has been shown that music arrangement can be reduced to an NP problem \cite{moses_computational_2016}, by considering the special case of music \emph{reduction}. Reduction is a form of arrangement whereby the number of instrument parts only gets smaller, and is defined here subject to the following conditions:
 
@@ -232,7 +237,7 @@ Before reduction can begin, a musical score must undergo preprocessing to ensure
 
 First, the music needs to be quantised. This could very easily be done by using predefined elements such as bars or notes, but these units on their own lack any intrinsic musical meaning. Similar to how a sentence might be split up into lexical phrases, instead of individial words or syllables, a line of music can be segmented into musical phrases, each representing a contained melodic or rhythmic idea. By preserving these smallest units of melodic lines and harmonies, we maintain the essence and familiarity of the original score, which is one of the core principles of arrangement.
 
-The approach taken in this study is the local boundary detection model (LBDM) \cite{cambouropoulos_lbdm_2011}, which aims to identify the boundaries between phrases by calculating the degree of change between successive notes; larger differences between notes would show an increased likelihood of a boundary, exploiting the fact that the starts and ends of phrases are usually characterised by a high degree of variation [CITE]. The strength of a boundary on a particular note is calculated over two of its parameters: pitch, and inter-onset interval (IOI), which is the time until the next note. This is chosen over note duration alone as it is often more noticeable to the listener [CITE].\footnote{``Music is the space between the notes as much as the notes themselves; it's defined as much by silence as by sound.'' (Claude Debussy)} The boundary strength $S_{x,i}$ for a particular parameter $x$ at note $i$ is given by
+The approach taken in this study is the local boundary detection model (LBDM) \cite{cambouropoulos_lbdm_2011}, which aims to identify the boundaries between phrases by calculating the degree of change between successive notes; larger differences between notes would show an increased likelihood of a boundary, exploiting the fact that the starts and ends of phrases are usually characterised by a high degree of variation \cite{cambouropoulos_lbdm_2011}. The strength of a boundary on a particular note is calculated over two of its parameters: pitch, and inter-onset interval (IOI), which is the time until the next note.\footnote{``Music is the space between the notes as much as the notes themselves; it's defined as much by silence as by sound.'' (Claude Debussy)} The boundary strength $S_{x,i}$ for a particular parameter $x$ at note $i$ is given by
 \begin{equation}
     S_{x,i}=x_i(r_{i-1, i} + r_{i, i+1})
     \label{eq:boundary-strength}
@@ -366,7 +371,7 @@ To allow a similar analysis across problems with different weight matrices, we s
     \label{eq:lagrange}
 \end{equation}
 
-In this study we set $E_m=1$ as bias towards part roles is preferred but not essential. The values of $A_m$ and $B_m$ can then be found by performing parametric variation and measuring the number of broken constraints (duplicates and overlaps) in the lowest-energy solutions. Parameter values should be just large enough to fulfil \cref{eq:lagrange}, whilst not being too large as to overwhelm the other terms in the QUBO equation and affect the quality of solutions [CITE].
+In this study we set $E_m=1$ as bias towards part roles is preferred but not essential. The values of $A_m$ and $B_m$ can then be found by performing parametric variation and measuring the number of broken constraints (duplicates and overlaps) in the lowest-energy solutions. Parameter values should be just large enough to fulfil \cref{eq:lagrange}, whilst not being too large as to overwhelm the other terms in the QUBO equation [CITE].
 
 \subsection{Solution interpretation}
 
@@ -441,7 +446,7 @@ Anneal time per sample could only be increased to a maximum of \qty{300}{\us} fo
 % TODO: info about classical solvers
 Having tuned the Lagrange parameters and solver configuration, we compare returned solutions from the QPU to classical optimisation algorithms solving the same problem. D-Wave provides a selection of heuristic classical samplers that can return solutions to QUBO problems, two of which are used in this study.
 
-The steepest descent method, the discrete analogue of gradient descent, takes steps according to a local minimisation---the dimension along which to descend is determined by the variable flip that causes the greatest reduction in energy [CITE]. The initial state of the solver is randomised for each sample, so although it is guaranteed to find a local minimum [CITE], for a complex problem with many such minima the same solution won't necessarily be returned. Despite its apparent rudimentary nature, this method is still very widely used for solving optimisation problems due to its speed [CITE].
+The steepest descent method, the discrete analogue of gradient descent, takes steps according to a local minimisation---the dimension along which to descend is determined by the variable flip that causes the greatest reduction in energy \cite{dwave_samplers}. The initial state of the solver is randomised for each sample, so although it is guaranteed to find a local minimum with enough steps, for a complex problem with many such minima the same solution won't necessarily be returned. Despite its apparent rudimentary nature, this method is still very widely used for solving optimisation problems.
 
 Simulated annealing, on the other hand, is more complex and works similarly to quantum annealing, but instead of evolving over a time interval $T$, the evolution is instead determined by a ``temperature'' parameter $T$ \cite{kirkpatrick_optimization_1983}. At each step, the probability $P$ of moving between states depends on the difference in energy $\Delta E$ and $T$. At all times, $P>0$ even if $\Delta E$---however, as $T\to 0$, $P\to0$ if $\Delta>0$ and is positive otherwise. This evolution of $P$ means that the system can initially climb potential barries, before settling into minima as the temperature decreases. In this implementation, temperature schedule is varied between samples, changing both the initial and final $T$ values. Due to its similarity, this method is often used as a direct comparison between quantum and classical approaches \cite{albash_demonstration_2018}.
 
@@ -489,7 +494,7 @@ Holistically, it can be said that the formulation and application of the propose
 The nature of classical algorithms means that, for an NP problem, the time to solution increases exponentially with problem size. Given that the quantum time to solution remains constant, quantum annealing will eventually show an advantage as the problem size increases. Here we have shown this advantage in some scenarios, but even so one that is relatively small. The energy advantage seen in \cref{fig:reads} against simulated annealing is only a small fraction of the overall energy, and the time advantage seen in \cref{fig:scaling} is only of the order of seconds, nowhere near the ``one million years'' of D-Wave's most recent claim. Bearing in mind also that the classical solvers were used ``out of the box'' and not tuned in any way as with the quantum method---it may be the case that proper configuration would reverse any quantum advantage gained. Additionally. there exist many other classical optimisation algorithms not considered, some which may be more suited to solving this particular problem. This study does not claim ``quantum supremacy''---this does not mean that the application of quantum annealing has not been useful.
 
 % Technology
-Nonetheless, it can't be said that this process is without limitations, the primary being the sophistication of current quantum technology. Although the technology has been improving for several years, at time of writing quantum annealers are still at an early stage. D-Wave's latest Advantage 4.1 chip is their latest iteration, but at just under \num{6000} qubits with a maximum degree of \num{15}, still leaves much to be desired for solving large, highly-connected problems. As seen in \cref{fig:qubits}, whilst Haydn Op.\ 1 could easily be embedded, Beethoven Op.\ 67 quickly overwhelmed the QPU, despite being shortened to just \num{21} bars, a mere \qty{4}{\%} of the entire piece. With current technology, both the length of scores and number of arrangement instruments are limited. D-Wave is currently experimenting with a new Zephyr topology which would allow embedding of problems with over \num{7000} physical qubits with a maximum degree of \num{20}, resulting in a \qtyrange{2}{10}{\%} improvement in chain lengths [CITE]; in circulation, these QPUs would allow more complex problems to be solved.
+Nonetheless, it can't be said that this process is without limitations, the primary being the sophistication of current quantum technology. Although the technology has been improving for several years, at time of writing quantum annealers are still at an early stage. D-Wave's latest Advantage 4.1 chip is their latest iteration, but at just under \num{6000} qubits with a maximum degree of \num{15}, still leaves much to be desired for solving large, highly-connected problems. As seen in \cref{fig:qubits}, whilst Haydn Op.\ 1 could easily be embedded, Beethoven Op.\ 67 quickly overwhelmed the QPU, despite being shortened to just \num{21} bars, a mere \qty{4}{\%} of the entire piece. With current technology, both the length of scores and number of arrangement instruments are limited. D-Wave is currently experimenting with a new Zephyr topology which would allow embedding of problems with over \num{7000} physical qubits with a maximum degree of \num{20}, resulting in a \qtyrange{2}{10}{\%} improvement in chain lengths \cite{dwave_zephyr}; in circulation, these QPUs would allow more complex problems to be solved.
 Furthermore, D-Wave imposes a time limit on problems submitted to its QPUs (at least for commercial use), alongside an overall monthly access allowance, constraining the total annealing time possible. Once quantum annealing technology becomes more commonplace, QPU time will be less scarce, allowing the possibility of longer anneal times which can resolve smaller spectral gaps.
 
 % Reduce complexity
@@ -515,7 +520,9 @@ Although it can be argued that music cannot be objectively ``scored'', nonethele
 To conclude, this study has shown the application quantum annealing to the automatic arrangement of music. By formulating a musical score into a function to be minimised, the annealing process can identify parts of the original to become the final arrangement based on defined objectives and constraints. An application of this sort, whilst still comparable to classical processes, is useful to consider in the emerging and unpredictable world of quantum computing. Just as science and business do already, it can be hoped that the arts take advantage of promising new technologies as well.
 
 % References
-\printbibliography[heading=bibintoc]
+\begin{singlespace*}
+    \printbibliography[heading=bibintoc]
+\end{singlespace*}
 
 \clearpage
 \appendix
@@ -528,7 +535,7 @@ The full repository of code used in this study can be found at:
 
 \url{https://github.com/kirbyzx/quantum-arrangement}.
 
-Music can be represented by many digital formats, each with their own benefits---in this study we choose to use MusicXML [CITE], a variant of the well-establish XML (extensible markup language) format. This format focuses on the interactive representation of standard sheet music, describing musical notes, rests, and other symbols, as well as the structure of the music, such as the arrangement of notes into bars, parts, and scores. It is widely supported by music notation software, allowing translation of music to graphic (PDF, PNG) and audio (MIDI, MP3) formats, as well as Python libraries that provide extensive resources for manipulating, translating, and creating MusicXML files, allowing scores to be broken down and reconstructed as fit. Although not as prevalent as other file formats, there exist a number of online libraries and databases of MusicXML files provided in the public domain. \cref{fig:haydn-score}
+Music can be represented by many digital formats, each with their own benefits---in this study we choose to use MusicXML, a variant of the well-establish XML (extensible markup language) format. This format focuses on the interactive representation of standard sheet music, describing musical notes, rests, and other symbols, as well as the structure of the music, such as the arrangement of notes into bars, parts, and scores. It is widely supported by music notation software, allowing translation of music to graphic (PDF, PNG) and audio (MIDI, MP3) formats, as well as Python libraries that provide extensive resources for manipulating, translating, and creating MusicXML files, allowing scores to be broken down and reconstructed as fit. Although not as prevalent as other file formats, there exist a number of online libraries and databases of MusicXML files provided in the public domain. \cref{fig:haydn-score}
 
 \section{Scores}
 \label{app:examples}
